salesforce/force-app/main/default/objects/Coffee_Lot__c/Coffee_Lot__c.object-meta.xml
<CustomObject>
    <label>Coffee Lot</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Coffee Lot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coffee Lots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>