salesforce/force-app/main/default/objects/Coffee_Lot__c/fields/Lot_Code__c.field-meta.xml
<CustomField>
    <fullName>Lot_Code__c</fullName>
    <externalId>true</externalId>
    <label>Lot Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>