salesforce/force-app/main/default/objects/Coffee_Lot__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conforme</fullName>
                <default>true</default>
                <label>Conforme</label>
            </value>
            <value>
                <fullName>En alerte</fullName>
            </value>
            <value>
                <fullName>Périmé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>