salesforce/force-app/main/default/objects/Coffee_Lot__c/validationRules/Storage_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Storage_Date_Not_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Storage_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>La date de stockage ne peut pas être dans le futur.</errorMessage>
</ValidationRule>